added lorem ipsum

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <main>
     <h1>Ariella Allen's website</h1>
-	<p>more stuff coming soon</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mattis ullamcorper luctus. Mauris elementum lobortis diam quis scelerisque. In hac habitasse platea dictumst. Integer tellus est, rutrum ut lectus ac, ullamcorper scelerisque nunc. Nullam iaculis leo non velit viverra mattis. Aenean a tristique elit, non volutpat libero. Maecenas sit amet vulputate augue. Nam non feugiat enim.</p>
   </main>
 </body>
 
