--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
   <main>
     <h1>Ariella Allen's website</h1>
-	<p>A future website for my daughter.  Maybe one day she will use it.</p>
+	  <p>A future website for my daughter.  Maybe one day she will use it.</p>
+	  <img src="unicorn.jpg" />
   </main>
 </body>
 
