added some text

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <main>
     <h1>Ariella Allen's website</h1>
 	  <p>A future website for my daughter.  Maybe one day she will use it.</p>
+	  <p>Ariella is 7 years old and lives in northern Cincinnati, Ohio.  She is in 1st grade.  Her favorite school subject is reading.  She wants to be a 1st grade teacher when she grows up.  She also wants to write books about unicorns.  Her favorite toys are unicorns, LOL, and Barbie.</p>
 	  <img src="unicorn.jpg" />
   </main>
 </body>
