--- a/index.html
+++ b/index.html
@@ -5,18 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <title>Ariella Allen</title>
 </head>
 
 <body>
-  <main>
-    <h1>Ariella Allen's website</h1>
-	  <p>A future website for my daughter.  Maybe one day she will use it.</p>
-	  <p>Ariella is 7 years old and lives in northern Cincinnati, Ohio.  She is in 1st grade.  Her favorite school subject is reading.  She wants to be a 1st grade teacher when she grows up.  She also wants to write books about unicorns.  Her favorite toys are unicorns, LOL, and Barbie.</p>
-	  <img src="unicorn.jpg" />
-  </main>
+  <div class="wrapper">
+    <div class="box header">
+      <h1>Ariella Allen's website</h1>
+    </div>
+
+    <div class="box content">
+      💗🌈🦄
+      Ariella is 7 years old and lives in northern Cincinnati, Ohio.
+      She is in 1st grade. Her favorite school subject is reading.
+      She wants to be a 1st grade teacher when she grows up.
+      She also wants to write books about unicorns.
+      Her favorite toys are unicorns, LOL, and Barbie.
+      She loves to dance, sing, draw, paint, play board games, and go to the playground.
+      She loves her 2 cats, and misses her other cat Tux who is in kitty heaven.
+      💗🌈🦄
+    </div>
+
+    <div class="box sidebar"><img src="unicorn.jpg" width="70%" /></div>
+  </div>
 </body>
 
 </html>
