--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="box content">
       💗🌈🦄
       Ariella is 7 years old and lives in northern Cincinnati, Ohio.
-      She is in 1st grade. Her favorite school subject is reading.
-      She wants to be a 1st grade teacher when she grows up.
+      She is in 2nd grade. Her favorite school subjects are reading and math.
+      She wants to be a teacher when she grows up.
       She also wants to write books about unicorns.
       Her favorite toys are unicorns, LOL, and Barbie.
       She loves to dance, sing, draw, paint, play board games, and go to the playground.
