updated test image

--- a/test.html
+++ b/test.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    test
+    <img src="https://cpswbt.z19.web.core.windows.net/IMG_1942.JPG" alt="image"/ >
 </body>
 </html>
