Ariella updates some text

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       Her favorite toys are unicorns, LOL, and Barbie.
       She loves to dance, sing, draw, paint, play board games, and go to the playground.
       She loves her 2 cats, and misses her other cat Tux who is in kitty heaven.
+	  I also have a pet that is from the north pole that is real.
+	  Her name is snowy and she is a snowfox.
+	  
       💗🌈🦄
     </div>
 
