message from dad

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
       She loves to dance, sing, draw, paint, play board games, and go to the playground.
       She loves her 2 cats, and misses her other cat Tux who is in kitty heaven.
 	  I also have a pet that is from the north pole that is real.
-	  Her name is snowy and she is a snowfox.
-	  
+	  Her name is snowy and she is a snowfox.  
       💗🌈🦄
+	  <br/>
+	  <br/>
+	  Ariella, if you ever look at this page by yourself, this is Dad.  :)  I love you very much and I am so proud of you.
     </div>
 
     <div class="box sidebar"><img src="unicorn.jpg" width="70%" /></div>
