--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <div class="box content">
       💗🌈🦄
       Ariella is 8 years old and lives in northern Cincinnati, Ohio.
-      She is in 2nd grade. Her favorite school subjects are reading and math.
+      She is in 2nd grade. 
+	  Her favorite school subjects are reading and math.
       She wants to be a teacher when she grows up.
       She also wants to write books about unicorns.
       Her favorite toys are unicorns, LOL, and Barbie.
@@ -27,6 +28,8 @@
       She loves her 2 cats, and misses her other cat Tux who is in kitty heaven.
 	  I also have a pet that is from the north pole that is real.
 	  Her name is snowy and she is a snowfox.  
+	  I promise the snowfox is real.
+	  I have a goofball dad.
       💗🌈🦄
 	  <br/>
 	  <br/>
