updating page to 3rd grade

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <div class="box content">
       💗🌈🦄
       Ariella is 8 years old and lives in northern Cincinnati, Ohio.
-      She is in 2nd grade. 
-	  Her favorite school subjects are reading and math.
+      She is in 3rd grade. 
+	  Her favorite school subjects are math and art.
       She wants to be a teacher when she grows up.
       She also wants to write books about unicorns.
       Her favorite toys are unicorns, LOL, and Barbie.
