Made changes, she doesn't like unicorns anymore

--- a/index.html
+++ b/index.html
@@ -17,26 +17,26 @@
     </div>
 
     <div class="box content">
-      💗🌈🦄
+      💗🌈😻
       Ariella is 8 years old and lives in northern Cincinnati, Ohio.
       She is in 3rd grade. 
 	  Her favorite school subjects are math and art.
       She wants to be a teacher when she grows up.
-      She also wants to write books about unicorns.
-      Her favorite toys are unicorns, LOL, and Barbie.
+      She also wants to write books about cats.
+      Her favorite toys are LOL and Legos.
       She loves to dance, sing, draw, paint, play board games, and go to the playground.
       She loves her 2 cats, and misses her other cat Tux who is in kitty heaven.
 	  I also have a pet that is from the north pole that is real.
 	  Her name is snowy and she is a snowfox.  
 	  I promise the snowfox is real.
 	  I have a goofball dad.
-      💗🌈🦄
+      💗🌈😻
 	  <br/>
 	  <br/>
 	  Ariella, if you ever look at this page by yourself, this is Dad.  :)  I love you very much and I am so proud of you.
     </div>
 
-    <div class="box sidebar"><img src="unicorn.jpg" width="70%" /></div>
+    <div class="box sidebar"><img src="cat.jpg" width="70%" /></div>
   </div>
 </body>
 
