--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 
     <div class="box content">
       💗🌈😻
-      Ariella is 8 years old and lives in northern Cincinnati, Ohio.
-      She is in 3rd grade. 
-	  Her favorite school subjects are math and art.
-      She wants to be a teacher when she grows up.
-      She also wants to write books about cats.
-      Her favorite toys are LOL and Legos.
-      She loves to dance, sing, draw, paint, play board games, and go to the playground.
-      She loves her 2 cats, and misses her other cat Tux who is in kitty heaven.
-	  I also have a pet that is from the north pole that is real.
+      I am Ariella and I am 9 years old and I live in northern Cincinnati, Ohio.
+      I am in 3rd grade. 
+      My favorite school subjects are math and art.
+      I wants to be a teacher when she grows up.
+      I also want to write books about cats.
+      My favorite toys are LOL and Legos.
+      I love to dance, sing, draw, paint, play board games, and go to the playground.
+      I love my 2 cats Bella and Candy.  
+      I miss my other cats Tux and Tigger who are in kitty heaven.
+      I also have a pet that is from the north pole that is real.
 	  Her name is snowy and she is a snowfox.  
-	  I promise the snowfox is real.
 	  I have a goofball dad.
       💗🌈😻
 	  <br/>
