--- a/index.html
+++ b/index.html
@@ -18,24 +18,18 @@
 
     <div class="box content">
       💗🌈😻
-      I am Ariella and I am 9 years old and I live in northern Cincinnati, Ohio.
-      I am in 3rd grade. 
+      I am Ariella and I am 9 years old.  
+      I live in Cincinnati, Ohio.
+      I am in 4th grade.
       My favorite school subjects are math and art.
-      I wants to be a teacher when she grows up.
+      I want to be a teacher when I grow up.
       I also want to write books about cats.
-      My favorite toys are LOL and Legos.
       I love to dance, sing, draw, paint, play board games, and go to the playground.
-      I love my 2 cats Bella and Candy.  
+      I love my 2 cats Bella and Candy.
       I miss my other cats Tux and Tigger who are in kitty heaven.
-      I also have a pet that is from the north pole that is real.
-	  Her name is snowy and she is a snowfox.  
-	  I have a goofball dad.
+      I have a goofball dad.
       💗🌈😻
-	  <br/>
-	  <br/>
-	  Ariella, if you ever look at this page by yourself, this is Dad.  :)  I love you very much and I am so proud of you.
     </div>
-
     <div class="box sidebar"><img src="cat.jpg" width="70%" /></div>
   </div>
 </body>
