--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
 
     <div class="box content">
       💗🌈😻
-      I am Ariella and I am 9 years old.  
+      I am Ariella and I am 10 years old.  
       I live in Cincinnati, Ohio.
       I am in 4th grade.
       My favorite school subjects are math and art.
       I want to be a teacher when I grow up.
       I also want to write books about cats.
-      I love to dance, sing, draw, paint, play board games, and go to the playground.
+      I love to dance, sing, draw, arial silks, paint, play board games, and go to the playground.
       I love my 2 cats Bella and Candy.
       I miss my other cats Tux and Tigger who are in kitty heaven.
-      I have a goofball dad.
+      I have an awesome mom.
+      My dad is a goofball.
       💗🌈😻
     </div>
     <div class="box sidebar"><img src="cat.jpg" width="70%" /></div>
