--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 
     <div class="content">
       <p>💗🌈😻</p>
-      <p>I am Ariella and I am 10 years old. I live in Cincinnati, Ohio. I am in 4th grade.</p>
-      <p>My favorite school subjects are math and art. I want to be a teacher when I grow up.</p>
+      <p>I am Ariella and I am 10 years old. I live in Cincinnati, Ohio. I am in 5th grade.</p>
+      <p>My favorite school subjects are math and art.</p>
       <p>I also want to write books about cats.</p>
-      <p>I love to dance, sing, draw, do aerial silks, paint, play board games, and go to the playground.</p>
-      <p>I love my 2 cats Bella and Candy. I miss my other cats Tux and Tigger who are in kitty heaven.</p>
+      <p>I love to dance, sing, draw, do aerial silks, paint, watch YouTube, play Roblox, and go to the playground.</p>
+      <p>I love my 3 cats Bella, Candy, and Mango. I miss my cats Tux and Tigger who passed away are in kitty heaven.</p>
       <p>I have an awesome mom. My dad is a goofball.</p>
       <p>💗🌈😻</p>
     </div>
