--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </div>
 
     <div class="sidebar">
-      <img src="cat.jpg" alt="Ariella's Cat">
+      <img src="cat.png" alt="Ariella's Cat">
     </div>
   </div>
 </body>
